file.txt
In file included from mila.c:40:
ml_builtins.c: In function ‘env_register_builtins’:
ml_builtins.c:1968:40: error: ‘native_list_set’ undeclared (first use in this function); did you mean ‘native_list_len’?
 1968 |     env_register_native(g, "list.set", native_list_set);
      |                                        ^~~~~~~~~~~~~~~
      |                                        native_list_len
ml_builtins.c:1968:40: note: each undeclared identifier is reported only once for each function it appears in
ml_builtins.c:1969:40: error: ‘native_list_get’ undeclared (first use in this function); did you mean ‘native_list_len’?
 1969 |     env_register_native(g, "list.get", native_list_get);
      |                                        ^~~~~~~~~~~~~~~
      |                                        native_list_len
mila.c: At top level:
mila.c:309:8: error: conflicting types for ‘vtagged_error’; have ‘Value *(char *, ...)’
  309 | Value *vtagged_error(char *fmt, ...)
      |        ^~~~~~~~~~~~~
In file included from ml_paths.c:2,
                 from mila.c:35:
mila.h:291:8: note: previous declaration of ‘vtagged_error’ with type ‘Value *(ErrorType,  char *, ...)’
  291 | Value *vtagged_error(ErrorType type, char *message, ...);
      |        ^~~~~~~~~~~~~
make: *** [Makefile:7: all] Error 1
